# NewDat220

genericwave/: AudioPlayer.cpp  AudioPlayer.h  Bullet.cpp  Bullet.h  CMakeLists.txt  CollisionTester.cpp  CollisionTester.h  Enemy.cpp  Enemy.h  MainMenuState.cpp  MainMenuState.h  Obstacle.cpp  Obstacle.h  Pickup.cpp  Pickup.h  Pistol.cpp  Pistol.h  Player.cpp  Player.h  TestState.cpp  TestState.h  Weapon.h  gamemachine.cpp  gamemachine.h  layer.cpp  layer.h  main.cpp  map.cpp  map.h  object.cpp  object.h  sprite.cpp  sprite.h  state.h
genericwave/Bilder/Stages/TMX/: teststage1.json  teststage1.tmx  teststage2.json  teststage2.tmx  teststage3.json  teststage3.tmx  teststage4.json
genericwave/Weapons/: AutomaticWeapon.cpp  AutomaticWeapon.h  Pistol.cpp  Pistol.h  Weapon.h
